# agentguard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: ci.yml  publish.yml
agentguard/: __init__.py  _logging.py  cli.py  exceptions.py  models.py
agentguard/compliance/: __init__.py  engine.py  formal_verifier.py  hitl.py  reporter.py  z3_models.py
agentguard/compliance/policies/: eu_ai_act.yaml  finos_aigf_v2.yaml  owasp_agentic.yaml
agentguard/core/: __init__.py  audit.py  circuit_breaker.py  identity.py  rbac.py  sandbox.py
agentguard/domains/: __init__.py
agentguard/domains/finance/: __init__.py  pii.py
agentguard/domains/finance/credit_risk/: __init__.py  adverse_action.py  agent_templates.py  fairness.py  model_validation.py
agentguard/domains/finance/synthetic/: __init__.py  generators.py  wgan_gp.py
agentguard/integrations/: __init__.py  _pipeline.py  a2a_middleware.py  crewai.py  google_adk.py  langgraph.py  mcp_middleware.py
agentguard/observability/: __init__.py  dashboard.py  replay.py  tracer.py
datasets/: README.md
docs/: architecture.md
docs/api/: index.md
docs/compliance/: index.md
docs/plans/: m2-security-runtime.md
docs/superpowers/plans/: 2026-04-10-m0-m1-scaffolding-audit-rbac.md
examples/: quickstart.py
examples/adverse_action_generation/: README.md  notice_pipeline.py
examples/credit_decisioning/: README.md  end_to_end_demo.py
examples/observability/: monitoring_demo.py
scripts/: generate_datasets.py
tests/: conftest.py
tests/integration/: test_core_e2e.py  test_sandbox_docker.py
tests/red_team/: test_sandbox_escape.py
tests/unit/: test_cli.py  test_cli_observe.py  test_cli_policy_verify.py  test_cli_replay.py  test_cli_verify.py  test_exceptions.py  test_mcp_middleware.py  test_models.py
tests/unit/compliance/: test_engine.py  test_formal_verifier.py  test_hitl.py  test_reporter.py
tests/unit/core/: test_audit.py  test_circuit_breaker.py  test_file_registry.py  test_identity.py  test_rbac.py  test_sandbox.py
tests/unit/domains/finance/: test_adverse_action.py  test_agent_templates.py  test_fairness.py  test_generators.py  test_model_validation.py  test_pii.py
tests/unit/integrations/: test_a2a_middleware.py  test_crewai.py  test_google_adk.py  test_langgraph.py  test_pipeline.py
tests/unit/observability/: test_dashboard.py  test_replay.py  test_tracer.py
